@@ -109,7 +109,7 @@ const DifxInput *DifxInput2FitsMC(const DifxInput *D,
 	{
 	   configId = D->scan[s].configId;
 	   freqId1 = D->config[configId].freqId + 1;
-	   sourceId1 = D->scan[s].sourceId + 1;
+	   sourceId1 = D->source[D->scan[s].sourceId].fitsSourceId + 1;
 	   jobId = D->scan[s].jobId;
 	   for(p = 0; p < D->scan[s].nPoint; p++)
 	   {
